# superproductivity-mcp

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  README.md  build-plugin.sh  mcp_server.py  pyproject.toml
.github/workflows/: build.yml  publish-dev.yml  publish.yml  release.yml  version-gate.yml
docs/superpowers/plans/: 2026-04-29-packaging-distribution.md  2026-04-30-gitflow-ci.md  2026-06-16-http-ipc.md  2026-06-16-singleton-bridge-daemon.md  2026-06-22-v2.2.0-bridge-hardening.md
docs/superpowers/specs/: 2026-04-29-gitflow-ci-design.md  2026-04-29-packaging-distribution-design.md  2026-06-16-singleton-bridge-daemon-design.md  2026-06-22-bridge-hardening-design.md
plugin/: index.html  manifest.json  plugin.js
scripts/: mcp-proxy.py
src/superproductivity_mcp/: __main__.py  bridge.py  daemon.py  server.py
tests/: test_bridge.py  test_daemon.py  test_mcp_logic.py
