[project]
name = "superproductivity-mcp"
version = "1.2.6"
description = "Super Productivity MCP server for Claude Desktop integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx<0.28.0",
]

[project.scripts]
superproductivity-mcp = "superproductivity_mcp.server:main"

[project.urls]
Homepage = "https://github.com/ben-elliot-nice/superproductivity-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superproductivity_mcp"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
